--- a/.github/workflows/Canbox_Lienol_DNSfilter.yml
+++ b/.github/workflows/Canbox_Lienol_DNSfilter.yml
@@ -23,8 +23,8 @@ on:
       - master
     paths:
       - 'Config_Files/CanBox_Lienol.config'
-  schedule:
-    - cron: 0 6 * * 4
+  #schedule:
+  #  - cron: 0 6 * * 4
   watch:
     types: started
 
